feat: Add "logText" TextArea to show log texts.